subiendo cambios de presentación de todo-list

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <img src="./img/todo-list.png" width="250" height="350" alt="conferencias">
         </div>
         <div class="project-description">
-            <a class="title" href="https://karijofre.github.io/Todo-List/">Piano-React</a>
+            <a class="title" href="https://karijofre.github.io/Todo-List/">Todo-List</a>
             <p class="middle"> En este proyecto vas a encontrar una aplicación que permite hacer una lista de tareas, marcar las tareas completadas ✔️ y poder eliminar 🗑 aquellas que ya no quieras o necesites. Firebase hace la magia con la base de datos. </p>
             <a href="https://github.com/Karijofre/Todo-List" target="_blank" class="button is-secondary middle">Ver código</a>
             <a href="https://karijofre.github.io/Todo-List/" target="_blank" class="button middle">Ver proyecto</a>
