Subiendo cambios de estilo del maquetado

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <a class="is-active" href="#main">Hola</a>
                 </li>
                 <li>
-                    <a href="#project">Proyectos</a>
+                    <a class="btn-project" href="#project">Proyectos</a>
                 </li>
                 <li>
-                    <a href="#contact">Hablemos</a>
+                    <a class="btn-contact" href="#contact">Hablemos</a>
                 </li>
             </ul>
         </nav>
-        <button class="button"> Curriculum</button>
+        <!-- <button class="button curriculum"> Curriculum</button> -->
     </header>
     <section aria-label="main" class="hero">
         <div class="hero-image">
@@ -64,8 +64,8 @@
         <div class="project-description">
             <a class="title" href="https://eli-ana-rjs.github.io/proyecto-5/">Comics-Marvel</a>
             <p>Aquí encontrarás una aplicación que permite listar cómics y personajes de Marvel, obteniendo información sobre los mismos desde su API. Este es el resultado de un trabajo colaborativo con dos de mis compañeras de ADA ITW 💓 </p>
-            <a href="https://github.com/eli-ana-rjs/proyecto-5" target="_blank" class="button is-secondary">Ver código</a>
-            <a href="https://eli-ana-rjs.github.io/proyecto-5/" target="_blank" class="button">Ver proyecto</a>
+            <a href="https://github.com/eli-ana-rjs/proyecto-5" target="_blank" class="button is-secondary middle">Ver código</a>
+            <a href="https://eli-ana-rjs.github.io/proyecto-5/" target="_blank" class="button middle">Ver proyecto</a>
         </div>
 
         
@@ -93,20 +93,20 @@
         <div class="project-description">
             <a class="title" href="https://karijofre.github.io/Piano-react/">Piano react</a>
             <p> Este es uno de mis primeros proyectos con React.js. Un piano virtual. </p>
-            <a href="https://github.com/Karijofre/Piano-react" target="_blank" class="button is-secondary">Ver código</a>
-            <a href="https://karijofre.github.io/Piano-react/" target="_blank" class="button" id="contact">Ver proyecto</a>
+            <a href="https://github.com/Karijofre/Piano-react" target="_blank" class="button is-secondary middle">Ver código</a>
+            <a href="https://karijofre.github.io/Piano-react/" target="_blank" class="button middle">Ver proyecto</a>
         </div>
     </div>
 
     <div class="project">
         <div class="project-image">
-            <img src="./img/todo-list.png" width="250" height="350" alt="conferencias">
+            <img src="./img/todo-list.png" width="250" height="300" alt="conferencias">
         </div>
         <div class="project-description">
             <a class="title" href="https://karijofre.github.io/Todo-List/">Todo-List</a>
             <p class="middle"> En este proyecto vas a encontrar una aplicación que permite hacer una lista de tareas, marcar las tareas completadas ✔️ y poder eliminar 🗑 aquellas que ya no quieras o necesites. Firebase hace la magia con la base de datos. </p>
             <a href="https://github.com/Karijofre/Todo-List" target="_blank" class="button is-secondary middle">Ver código</a>
-            <a href="https://karijofre.github.io/Todo-List/" target="_blank" class="button middle">Ver proyecto</a>
+            <a href="https://karijofre.github.io/Todo-List/" target="_blank" class="button middle" id="contact">Ver proyecto</a>
         </div>
 
         
