--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="project-description">
             <a class="title" href="https://eli-ana-rjs.github.io/proyecto-5/">Comics-Marvel</a>
-            <p>Aquí encontrarás una aplicación que permite listar cómics y personajes de Marvel, obteniendo información sobre los mismos desde su API. Este es el resultado de un trabajo colaborativo con dos de mis compañeras de ADA ITW 💓 </p>
+            <p class="comics" style="width: 70%;">Aquí encontrarás una aplicación que permite listar cómics y personajes de Marvel, obteniendo información sobre los mismos desde su API. Este es el resultado de un trabajo colaborativo con dos de mis compañeras de ADA ITW 💓 </p>
             <a href="https://github.com/eli-ana-rjs/proyecto-5" target="_blank" class="button is-secondary middle">Ver código</a>
             <a href="https://eli-ana-rjs.github.io/proyecto-5/" target="_blank" class="button middle">Ver proyecto</a>
         </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="project-description">
             <a class="title" href="https://karijofre.github.io/Piano-react/">Piano react</a>
-            <p> Este es uno de mis primeros proyectos con React.js. Un piano virtual. </p>
+            <p class="piano" style="width: 70%;"> Este es uno de mis primeros proyectos con React.js. Un piano virtual. </p>
             <a href="https://github.com/Karijofre/Piano-react" target="_blank" class="button is-secondary middle">Ver código</a>
             <a href="https://karijofre.github.io/Piano-react/" target="_blank" class="button middle">Ver proyecto</a>
         </div>
