--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 
     <div class="project">
         <div class="project-image">
-            <img src="./img/todo-list.png" width="250" height="300" alt="conferencias">
+            <img src="./img/to-do.png" width="250" height="300" alt="todo">
         </div>
         <div class="project-description">
-            <a class="title" href="https://karijofre.github.io/Todo-List/">Todo-List</a>
-            <p class="middle"> En este proyecto vas a encontrar una aplicación que permite hacer una lista de tareas, marcar las tareas completadas ✔️ y poder eliminar 🗑 aquellas que ya no quieras o necesites. Firebase hace la magia con la base de datos. </p>
-            <a href="https://github.com/Karijofre/Todo-List" target="_blank" class="button is-secondary middle">Ver código</a>
-            <a href="https://karijofre.github.io/Todo-List/" target="_blank" class="button middle" id="contact">Ver proyecto</a>
+            <a class="title" href="https://karijofre.github.io/To-do-list/">Todo-List</a>
+            <p class="middle"> En este proyecto vas a encontrar una aplicación que permite hacer una lista de tareas, marcar las tareas completadas ✔️ y poder eliminar 🗑 aquellas que ya no quieras o necesites. </p>
+            <a href="https://github.com/Karijofre/To-do-list" target="_blank" class="button is-secondary middle">Ver código</a>
+            <a href="https://karijofre.github.io/To-do-list/" target="_blank" class="button middle" id="contact">Ver proyecto</a>
         </div>
 
         
