Haciendo cambios de proyectos para exponer

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
      <!-- Algunos de mis proyectos -->
     <div class="project" id="project">
         <div class="project-image">
-            <img src="./img/comics.png" width="250" height="400" alt="comics">
+            <img src="./img/screen-app.png" width="250" height="400" alt="comics">
         </div>
         <div class="project-description">
-            <a class="title" href="https://eli-ana-rjs.github.io/proyecto-5/">Comics-Marvel</a>
-            <p class="comics" style="width: 70%;">Aquí encontrarás una aplicación que permite listar cómics y personajes de Marvel, obteniendo información sobre los mismos desde su API. Este es el resultado de un trabajo colaborativo con dos de mis compañeras de ADA ITW 💓 </p>
-            <a href="https://github.com/eli-ana-rjs/proyecto-5" target="_blank" class="button is-secondary middle">Ver código</a>
-            <a href="https://eli-ana-rjs.github.io/proyecto-5/" target="_blank" class="button middle">Ver proyecto</a>
+            <a class="title" href="https://amazing-shirley-75d411.netlify.app/">Popcorn mania</a>
+            <p class="comics" style="width: 70%;">Esta es una aplicación realizada con React que permite conectarse a una API de películas, los estrenos, populares y mejor ranqueadas. </p>
+            <a href="https://github.com/Karijofre/Popcorn-mania" target="_blank" class="button is-secondary middle">Ver código</a>
+            <a href="https://amazing-shirley-75d411.netlify.app/" target="_blank" class="button middle">Ver proyecto</a>
         </div>
 
         
